feat: change the URI of user APIs
